--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,3 +47,13 @@ nav a {
     width: 100%;
     height: auto;
 }
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2); 
+    padding: 1rem;
+    background-color: #fdf0d5;
+    color: #669bbc;
+    text-align: center;
+}
