--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,6 +14,7 @@ nav a {
     padding: 1rem;
     background-color: #003049;
     color: #fdf0d5;
+    text-align: right;
 
 }
 .hero div {
@@ -34,21 +35,8 @@ nav a {
 
 }
 
-.logo {
-    position: relative;
-    float: left;
-    margin: 20px;
-    height: auto;
-}
+.hero p {
 
-.hero img {
-
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-aside {
     width: 20rem;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2); 
@@ -57,3 +45,14 @@ aside {
     color: #669bbc;
     text-align: center;
 }
+
+
+
+.hero img {
+
+    display: block;
+    width: 100%;
+    height: auto;
+    float: right;
+}
+
