--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,6 +9,7 @@
     font-family: "Romanesco", system-ui;
     font-weight: 400;
     font-style: normal;
+    
   }
   
 *{
@@ -16,30 +17,53 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header,footer {
+
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+
+
 header {
-    margin: 0;
-    border: 1px solid;
-    padding: 1rem;
+	margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 120px 1fr 2fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
     background-color: #003049;
 }
 
+.logo img {
+	margin: 0 0.25rem 0 1rem;
+	width: 64px;
+	height: auto;
 
-
-header nav {
-    background-color: #669bbc; 
-    padding: 30px;
-    text-align: right;
-    
 }
-header nav a {
-    margin: 0;
-    border: 1px solid;
-    padding: 1rem;
-    background-color: #003049;
+
+nav {
+	text-align: right;}
+
+nav h1 {
+
     color: #fdf0d5;
-    text-decoration: none;
+}
+
+.navigation {
+	display: flex;
+	list-style: none;
 
 }
+
+.navigation a {
+	color:  #003049;
+	padding: 20px;
+    background-color: #fdf0d5;
+    text-align: right;
+    text-decoration: underline;
+}
+
 
 
 .hero div {
@@ -53,9 +77,10 @@ header nav a {
     color:  #fdf0d5;
     text-align: center;
 }
-.hero h1 {
+h2 {
     
     position: relative;
+    font-family: "romanesco",system-ui;
    
 }
 
@@ -75,8 +100,10 @@ header nav a {
     padding: 1rem;
     background-color: #669bbc ;
     color:  #fdf0d5;
-    text-align: center;
+    text-align: justify;
     top: auto;
+    align-self: center;
+    
 }
 
 
@@ -101,7 +128,21 @@ section {
     position: relative;
 }
 
+.evi {
+    position: relative;
+}
 
+.evi img {
+
+    width: 150px;
+    height: auto;
+
+}
+
+
+figure{
+    font-family: "Road Rage", system-ui;;
+}
 
 footer nav a img { 
     width: 50px;
