--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+
+
+header,footer {
+
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 nav {
     background-color: steelblue; 
     padding: 10px;
