--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -11,140 +11,18 @@
     font-style: normal;
     
   }
-  
-*{
+ 
+  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header,footer {
-
-    max-width: 840px;
-    margin: 0 auto;
-}
-
-
-
-header {
-	margin: 1rem auto;
-	display: grid;
-	grid-template-columns: 120px 1fr 2fr;
-	align-items: center;
-	border-bottom: 1px solid #ccc;
-    background-color: #003049;
-}
-
-.logo img {
-	margin: 0 0.25rem 0 1rem;
-	width: 64px;
-	height: auto;
 
 }
-
-nav {
-	text-align: right;}
-
-nav h1 {
-
-    color: #fdf0d5;
-}
-
-.navigation {
-	display: flex;
-	list-style: none;
-
-}
-
-.navigation a {
-	color:  #003049;
-	padding: 20px;
-    background-color: #fdf0d5;
-    text-align: right;
-    text-decoration: underline;
-}
-
-
-
-.hero div {
-
-    position: relative;
-    width: 100%;
+.box{
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); 
+    border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
-    background-color: #669bbc ;
-    color:  #fdf0d5;
-    text-align: center;
-}
-h2 {
-    
-    position: relative;
-    font-family: "romanesco",system-ui;
-   
+    background-color: #ddd;
+    color: #000;
 }
 
-.hero article { 
-
-    position: relative;
-    
-
-}
-
-.hero article p {
-
-    position: relative;
-    width: 100%;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); 
-    padding: 1rem;
-    background-color: #669bbc ;
-    color:  #fdf0d5;
-    text-align: justify;
-    top: auto;
-    align-self: center;
-    
-}
-
-
-
-.hero img{
-    display: block;
-    width: 100%;
-    height: auto;
-    position: relative;
-
-}
-
-section {
-
-    width: 100%;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); 
-    padding: 1rem;
-    background-color: #fdf0d5 ;
-    text-align: justify;
-    color: black;
-    position: relative;
-}
-
-.evi {
-    position: relative;
-}
-
-.evi img {
-
-    width: 150px;
-    height: auto;
-
-}
-
-
-figure{
-    font-family: "Road Rage", system-ui;;
-}
-
-footer nav a img { 
-    width: 50px;
-    float: right;
-}
