--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -18,7 +18,8 @@
     box-sizing: border-box;
 
 }
-.box{
+
+.box1{
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
@@ -26,3 +27,77 @@
     color: #000;
 }
 
+.box2{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+    padding: 1rem;
+    background-color: #003049;
+}
+
+.nosubraya { /*Aqui se quitara el subrayado a los links*/
+
+    text-decoration: none;
+
+}
+
+header a {
+    
+    color: aliceblue;
+    text-align: right;
+}
+
+header img {
+    position: relative;
+    float: left;
+}
+
+.hero div {
+
+    position: relative;
+
+}
+
+.hero img {
+
+    display: block;
+    width: 100%;
+    height: auto;
+
+}
+
+h1 {
+    
+    position: absolute;
+    top: 450px;
+    left: 500px;
+    color: aliceblue;
+
+}
+
+article {
+    
+    position: absolute;
+    top: 500px;
+    text-align: center;
+
+}
+
+article img{
+
+    float: right;
+    width: 25px;
+    height: 50px;
+
+}
+
+section{
+
+    position: relative;
+}
+
+.minimi {
+
+    float: right;
+    width: 50px;
+    height: auto;
+}
