--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,12 +43,21 @@ header,footer {
 
 nav {
     background-color: steelblue; 
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
+
 nav a {
-    color: white;
+    color: #fff;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+
 }
 
 h1 {
@@ -67,9 +76,6 @@ p {
     padding: 0;
 }
 
-main {
-    max-width: 840px;
-}
 
 aside {
     width: 20rem;
