--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@ aside h2 {
     left: 50px;
 }
 
-header,footer {
+header, .grid, footer {
 
     max-width: 840px;
     margin: 0 auto;
@@ -62,6 +62,13 @@ nav a {
 
 h1 {
     color: steelblue;
+    border-bottom: 2px solid steelblue;
+}
+
+h2 {
+
+    color: #fff;
+    
 }
 
 img {
@@ -77,15 +84,7 @@ p {
 }
 
 
-aside {
-    width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); 
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
-}
+
 
 aside img {
     width: 200px;
@@ -102,4 +101,30 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+.grid {
+
+    display: grid;
+    align-items: center;
+
+}
+
+main{
+
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2); 
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
