--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,6 +28,7 @@
     color: #000;
 }
 
+
 .box2{
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1); 
@@ -110,12 +111,22 @@ section{
     position: relative;
 }
 
-.imevi{
+.imevi2{
 
-    width: 300px;
+    width: 250px;
     height: auto;
 
+
 }
+
+.imevi{
+
+    width: 190px;
+    height: auto;
+
+
+}
+
 
 .minimi {
 
@@ -123,3 +134,64 @@ section{
     width: 50px;
     height: auto;
 }
+
+header nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+
+.alinera{
+
+    display: grid;
+    align-items: center;
+    
+}
+
+.aliniera1 {
+
+grid-column: 1/3;
+grid-row: 1/2;
+
+}
+
+.aliniera2{
+
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.aliniera3 {
+
+    grid-column: 3/3;
+    grid-row: 1/2;
+}
+
+.aliniera4 {
+
+    grid-column: 1/3;
+    grid-row: 2/2;
+}
+
+.aliniera5 {
+
+    grid-column: 3/3;
+    grid-row: 2/2;
+}
+
+h2 {
+
+    text-align: center;
+
+}
+
+.izq{
+
+    text-align: left;
+
+}
+
+
+
