--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -12,8 +12,9 @@
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
-    background-color: #ddd;
+    background-color: #fff;
     color: #000;
+    position: relative;
 }
 
 
@@ -22,6 +23,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
     background-color: #003049;
+    position: relative;
 }
 
 /*Header parte*/
@@ -29,6 +31,7 @@
 header img {
     position: relative;
     float: left;
+    width: auto;
 }
 header nav {
     display: flex;
@@ -46,7 +49,39 @@ header nav a {
     font-weight: 700;
     text-align: right;
 }
+/*Tabla diseño*/
+table{
 
+    position: relative;
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+thead,
+tfoot {
+  background-color: rgb(228 240 245);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+}
+
+.map{
+
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+    padding: 1rem;
+    background-color: #fff;
+    position: relative;
+    text-align: center;
+
+}
 
 .minimi {
 
@@ -55,6 +90,11 @@ header nav a {
     height: auto;
 }
 
+.center {
+
+    text-align: center;
+
+}
 
 footer { 
 
