--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -15,6 +15,7 @@
     background-color: #fff;
     color: #000;
     position: relative;
+    text-align: center;
 }
 
 
@@ -95,6 +96,51 @@ td {
     text-align: center;
 
 }
+
+/*Fotos de empleados*/
+.imevi{
+
+    width: 190px;
+    height: auto;
+
+
+}
+
+.alinera{
+
+    display: grid;
+    align-items: center;
+    
+}
+
+.aliniera1 {
+
+    grid-column: 1/3;
+    grid-row: 1/2;
+    
+    }
+    
+    .aliniera2{
+    
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    
+    .aliniera3 {
+    
+        grid-column: 3/3;
+        grid-row: 1/2;
+    }
+
+/*Grafologia*/
+
+legend{
+    font-family: Georgia;
+    font-size: 50px;
+}
+
+
+
 
 footer { 
 
