--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -199,3 +199,54 @@ footer {
     border-top: 1px solid #000;
     text-align: center;
 }
+
+
+/*New*/
+/*Tabla diseño*/
+
+table{
+
+    position: relative;
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+thead,
+tfoot {
+  background-color: rgb(228 240 245);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+}
+
+.map{
+
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+    padding: 1rem;
+    background-color: #fff;
+    position: relative;
+    text-align: center;
+
+}
+
+/*Grafologia*/
+
+legend{
+    font-family: Georgia;
+    font-size: 50px;
+}
+
+.center {
+
+    text-align: center;
+
+}
+
