--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -34,6 +34,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
     background-color: #003049;
+    color: aliceblue;
 }
 
 .nosubraya { /*Aqui se quitara el subrayado a los links*/
@@ -81,7 +82,7 @@ header nav a {
 
 }
 
-h1 {
+.hero h1 {
     
     position: absolute;
     top: 450px;
@@ -208,11 +209,12 @@ table{
 
     position: relative;
     border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
+    border: 5px solid rgb(140 140 140);
     font-family: sans-serif;
-    font-size: 0.8rem;
+    font-size: 2.5rem;
     letter-spacing: 1px;
     text-align: center;
+    left: 300px;
 }
 
 thead,
