--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -98,6 +98,15 @@ header nav a {
 
 }
 
+.hero p{
+    
+    
+    color: aliceblue;
+    width: 200px;
+    height: auto;
+    font-size: 25px;
+}
+
 article {
     
     position: absolute;
@@ -288,8 +297,8 @@ legend{
 
     position: absolute;
     text-align: center;
-    padding: 0 250px;
-    top: 250px;
+    padding: 0 150px;
+    top: 50px;
     color: #fff;
 }
 
@@ -334,4 +343,13 @@ legend{
 
     }
 
+}
+
+/*Efecto vidrio*/
+
+.vidrio {
+
+    border: 3px solid #fafafa10;
+    margin: 0 auto;
+    background: #fafafa10;
 }
