--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,6 +20,7 @@
 
 }
 
+/*Mis cajas con el fin de no tener problemas con los margenes*/
 .box1{
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1); 
@@ -45,6 +46,16 @@
     text-align: center;
     left: 400px;
     font-size: 30px;
+}
+
+.box4{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+    padding: 1rem;
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+
 }
 
 .nosubraya { /*Aqui se quitara el subrayado a los links*/
@@ -171,6 +182,7 @@ header nav {
 
     display: grid;
     align-items: center;
+    list-style: none;
     
 }
 
@@ -278,7 +290,7 @@ legend{
 /*Carrusel CSS*/
 
 .slider-box {
-
+    position: relative;
     width: 640px;
     height: auto;
     margin: 50px auto 0;
